--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="style.css" />
     <title>Todo app</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -26,17 +26,23 @@
     </style>
   </head>
   <body>
-    Todo
+    <main class="main-card-container">
+      <h1 class="app-title">TO DO</h1>
+      <form class="form-container">
+        <input
+          type="text"
+          class="text-input"
+          placeholder="Create a new todo..."
+        />
+        <input type="submit" class="submit-button" />
+      </form>
+    </main>
 
-    <!-- Add dynamic number -->
-    items left All Active Completed Clear Completed Drag and drop to reorder
-    list
-
-    <div class="attribution">
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div> -->
   </body>
 </html>
