few features added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="/script.js"></script>
     <title>Todo app</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -34,8 +35,9 @@
           class="text-input"
           placeholder="Create a new todo..."
         />
-        <input type="submit" class="submit-button" />
+        <input type="button" class="submit-button" value="ADD TASK" />
       </form>
+      <ul class="list-container"></ul>
     </main>
 
     <!-- <div class="attribution">
