--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
     <title>Todo app</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
